Get all courses from TMC